// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Lists/List Examples List With Control 1`] = `
.c5 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 32px;
  height: 32px;
  color: #666666;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  font-size: 16px;
}

.c3:active {
  color: #666666;
}

.c3.focus-visible,
.c3[data-focus-visible-added] {
  background-color: rgba(102,102,102,0.16);
}

.c3.focus-visible:active,
.c3[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c3.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.12);
}

.c3.RcIconButton-disabled {
  color: #C7C7C7;
}

.c3.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c3.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c3.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c3.RcIconButton-contained.RcIconButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c3.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c3.RcIconButton-contained.focus-visible,
.c3.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c3.RcIconButton-contained.focus-visible:before,
.c3.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c3.RcIconButton-contained:active {
  color: #fff;
}

.c3 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c0 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
  cursor: default;
}

.c0.RcListItem-focusVisible {
  background-color: rgba(102,102,102,0.16);
}

.c0.RcListItem-selected,
.c0.RcListItem-selected:hover {
  background-color: rgba(102,102,102,0.12);
}

.c0 .RcListItemTouchRipple-rippleVisible {
  color: #666666;
}

.c0.RcListItem-gutters {
  padding-left: 16px;
  padding-right: 16px;
}

.c0.RcListItem-dense {
  padding-top: 4px;
  padding-bottom: 4px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c2 > * + * {
  margin-left: 8px;
}

.c1 {
  padding: 0;
  margin: 0 8px 0 0;
}

.c1.RcListItemText-multiline {
  margin: 4px 8px 4px 0px;
}

.c1.RcListItemText-inset {
  padding-left: 56px;
}

.c1 .RcListItemText-primary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

.c1 .RcListItemText-secondary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

@media (hover:hover) and (pointer:fine) {
  .c3:hover {
    background-color: rgba(102,102,102,0.08);
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c3.RcIconButton-contained:hover {
    color: #fff;
  }

  .c3.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c0:hover {
    background-color: rgba(102,102,102,0.08);
  }
}

<ul
  className="MuiList-root "
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 RcListItem-multiline MuiListItem-gutters RcListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemText-root c1"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Line item 1
      </span>
    </div>
    <div
      className="MuiListItemSecondaryAction-root c2"
    >
      <button
        aria-label="Comments"
        className="MuiButtonBase-root c3 RcIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="c4 inbox icon"
        >
          <svg
            className="c5"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M30 25a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V14.333c0-.865.281-1.708.8-2.4L7.4 5.8A2 2 0 0 1 9 5h14c.63 0 1.222.296 1.6.8l4.6 6.133c.519.692.8 1.535.8 2.4V25zM11.1 15H4v9a1 1 0 0 0 1 1h22a1 1 0 0 0 1-1v-9h-7.1a5.002 5.002 0 0 1-9.752.212L11.1 15zm11.4-8h-13a1 1 0 0 0-.8.4l-3.96 5.28a.2.2 0 0 0 .16.32H12a1 1 0 0 1 1 1 3 3 0 0 0 5.995.176l.012-.293A1 1 0 0 1 20 13h7.1a.2.2 0 0 0 .16-.32L23.3 7.4a1 1 0 0 0-.8-.4z"
            />
          </svg>
          
        </span>
      </button>
    </div>
  </div>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 RcListItem-multiline MuiListItem-gutters RcListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemText-root c1"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Line item 2
      </span>
    </div>
    <div
      className="MuiListItemSecondaryAction-root c2"
    >
      <button
        aria-label="Comments"
        className="MuiButtonBase-root c3 RcIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="c4 inbox icon"
        >
          <svg
            className="c5"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M30 25a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V14.333c0-.865.281-1.708.8-2.4L7.4 5.8A2 2 0 0 1 9 5h14c.63 0 1.222.296 1.6.8l4.6 6.133c.519.692.8 1.535.8 2.4V25zM11.1 15H4v9a1 1 0 0 0 1 1h22a1 1 0 0 0 1-1v-9h-7.1a5.002 5.002 0 0 1-9.752.212L11.1 15zm11.4-8h-13a1 1 0 0 0-.8.4l-3.96 5.28a.2.2 0 0 0 .16.32H12a1 1 0 0 1 1 1 3 3 0 0 0 5.995.176l.012-.293A1 1 0 0 1 20 13h7.1a.2.2 0 0 0 .16-.32L23.3 7.4a1 1 0 0 0-.8-.4z"
            />
          </svg>
          
        </span>
      </button>
    </div>
  </div>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 RcListItem-multiline MuiListItem-gutters RcListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemText-root c1"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Line item 3
      </span>
    </div>
    <div
      className="MuiListItemSecondaryAction-root c2"
    >
      <button
        aria-label="Comments"
        className="MuiButtonBase-root c3 RcIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="c4 inbox icon"
        >
          <svg
            className="c5"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M30 25a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V14.333c0-.865.281-1.708.8-2.4L7.4 5.8A2 2 0 0 1 9 5h14c.63 0 1.222.296 1.6.8l4.6 6.133c.519.692.8 1.535.8 2.4V25zM11.1 15H4v9a1 1 0 0 0 1 1h22a1 1 0 0 0 1-1v-9h-7.1a5.002 5.002 0 0 1-9.752.212L11.1 15zm11.4-8h-13a1 1 0 0 0-.8.4l-3.96 5.28a.2.2 0 0 0 .16.32H12a1 1 0 0 1 1 1 3 3 0 0 0 5.995.176l.012-.293A1 1 0 0 1 20 13h7.1a.2.2 0 0 0 .16-.32L23.3 7.4a1 1 0 0 0-.8-.4z"
            />
          </svg>
          
        </span>
      </button>
    </div>
  </div>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 RcListItem-multiline MuiListItem-gutters RcListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemText-root c1"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Line item 4
      </span>
    </div>
    <div
      className="MuiListItemSecondaryAction-root c2"
    >
      <button
        aria-label="Comments"
        className="MuiButtonBase-root c3 RcIconButton-root"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="c4 inbox icon"
        >
          <svg
            className="c5"
            viewBox="0 0 32 32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M30 25a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V14.333c0-.865.281-1.708.8-2.4L7.4 5.8A2 2 0 0 1 9 5h14c.63 0 1.222.296 1.6.8l4.6 6.133c.519.692.8 1.535.8 2.4V25zM11.1 15H4v9a1 1 0 0 0 1 1h22a1 1 0 0 0 1-1v-9h-7.1a5.002 5.002 0 0 1-9.752.212L11.1 15zm11.4-8h-13a1 1 0 0 0-.8.4l-3.96 5.28a.2.2 0 0 0 .16.32H12a1 1 0 0 1 1 1 3 3 0 0 0 5.995.176l.012-.293A1 1 0 0 1 20 13h7.1a.2.2 0 0 0 .16-.32L23.3 7.4a1 1 0 0 0-.8-.4z"
            />
          </svg>
          
        </span>
      </button>
    </div>
  </div>
</ul>
`;

exports[`Storyshots 🚀 Cleanup Components/Lists/List Examples Simple List 1`] = `
.c3 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 24px;
}

.c5 {
  position: relative;
  margin: 0;
  border: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: initial;
  width: 100%;
  height: 1px;
  background-color: #E5E5E5;
}

.c0 {
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #121212;
  cursor: default;
}

.c0.RcListItem-focusVisible {
  background-color: rgba(102,102,102,0.16);
}

.c0.RcListItem-selected,
.c0.RcListItem-selected:hover {
  background-color: rgba(102,102,102,0.12);
}

.c0 .RcListItemTouchRipple-rippleVisible {
  color: #666666;
}

.c0.RcListItem-gutters {
  padding-left: 16px;
  padding-right: 16px;
}

.c0.RcListItem-dense {
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  height: unset;
  color: #666666;
  min-width: unset;
}

.c4 {
  padding: 0;
  margin: 0 8px 0 0;
}

.c4.RcListItemText-multiline {
  margin: 4px 8px 4px 0px;
}

.c4.RcListItemText-inset {
  padding-left: 56px;
}

.c4 .RcListItemText-primary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

.c4 .RcListItemText-secondary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

@media (hover:hover) and (pointer:fine) {
  .c0:hover {
    background-color: rgba(102,102,102,0.08);
  }
}

<ul
  className="MuiList-root "
>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 RcListItem-multiline MuiListItem-gutters RcListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemIcon-root c1"
    >
      <span
        className="c2 inbox icon"
      >
        <svg
          className="c3"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M30 25a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V14.333c0-.865.281-1.708.8-2.4L7.4 5.8A2 2 0 0 1 9 5h14c.63 0 1.222.296 1.6.8l4.6 6.133c.519.692.8 1.535.8 2.4V25zM11.1 15H4v9a1 1 0 0 0 1 1h22a1 1 0 0 0 1-1v-9h-7.1a5.002 5.002 0 0 1-9.752.212L11.1 15zm11.4-8h-13a1 1 0 0 0-.8.4l-3.96 5.28a.2.2 0 0 0 .16.32H12a1 1 0 0 1 1 1 3 3 0 0 0 5.995.176l.012-.293A1 1 0 0 1 20 13h7.1a.2.2 0 0 0 .16-.32L23.3 7.4a1 1 0 0 0-.8-.4z"
          />
        </svg>
        
      </span>
    </div>
    <div
      className="MuiListItemText-root c4"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Inbox
      </span>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 RcListItem-multiline MuiListItem-gutters RcListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemIcon-root c1"
    >
      <span
        className="c2 draft icon"
      >
        <svg
          className="c3"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M29 27a1 1 0 0 1 0 2H14a1 1 0 0 1 0-2h15zm-.99-23a4 4 0 0 1 0 5.657L10.761 26.906c-.279.279-.635.47-1.022.547l-5.006 1.001a1 1 0 0 1-1.177-1.176l1.001-5.006c.077-.387.268-.743.547-1.022L22.353 4.001a4 4 0 0 1 5.657 0zm-7.071 4.242L6.597 22.584l2.828 2.828L23.767 11.07l-2.828-2.828zm2.828-2.828-1.413 1.413 2.828 2.828 1.413-1.414a2 2 0 1 0-2.828-2.828z"
          />
        </svg>
        
      </span>
    </div>
    <div
      className="MuiListItemText-root c4"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Drafts
      </span>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <hr
    className="c5"
    role="separator"
  />
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 RcListItem-multiline MuiListItem-gutters RcListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemText-root c4"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Trash
      </span>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
  <div
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root c0 RcListItem-multiline MuiListItem-gutters RcListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiListItemText-root c4"
    >
      <span
        className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
      >
        Spam
      </span>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
</ul>
`;
